[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/enemy/baseEnemy/baseEnemy.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 9, 6, 13 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.302326, 0.392027, 0.651163, 0.694352, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 0.929199, 0.718454, 0.0762234, 1, 0.897957, 1, 0.0234375, 1, 0, 0, 0, 1, 0.873418, 0.873418, 0.873418, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.848765, 0.55 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 2
emission_box_extents = Vector3( 2, 2, 2 )
flag_align_y = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
scale = 10.0
scale_random = 1.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="SpatialMaterial" id=7]
flags_unshaded = true
vertex_color_use_as_albedo = true

[sub_resource type="CubeMesh" id=8]
material = SubResource( 7 )
size = Vector3( 1, 1, 1 )
subdivide_width = 1
subdivide_height = 1

[sub_resource type="Animation" id=9]
resource_name = "hurt"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("rotationalObjects/AnimatedSprite3D:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="BoxShape" id=10]
extents = Vector3( 1.5, 1.5, 1.5 )

[node name="baseEnemy" type="Area" groups=[
"enemy",
]]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
shape = SubResource( 1 )

[node name="shootTimer" type="Timer" parent="."]
autostart = true

[node name="moveTimer" type="Timer" parent="."]
autostart = true

[node name="deathTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="rotationalObjects" type="Spatial" parent="."]

[node name="bulletSpawnPos" type="Position3D" parent="rotationalObjects"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6.5 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="rotationalObjects"]
transform = Transform( 50, 0, 0, 0, 50, 0, 0, 0, 50, 0, -1, 0 )

[node name="playerCast" type="RayCast" parent="rotationalObjects"]
enabled = true
cast_to = Vector3( 0, 0, -500 )

[node name="shootNoisePlayer" type="AudioStreamPlayer3D" parent="."]
unit_db = 40.0

[node name="rayFolder" type="Spatial" parent="."]

[node name="BackWardRay" type="RayCast" parent="rayFolder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, 10 )
enabled = true
cast_to = Vector3( 20, 0, 10 )

[node name="FowardRay" type="RayCast" parent="rayFolder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, -1, -10 )
enabled = true
cast_to = Vector3( -20, 0, -10 )

[node name="LeftRay" type="RayCast" parent="rayFolder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 10 )
enabled = true
cast_to = Vector3( 5, 0, -22 )

[node name="RightRay" type="RayCast" parent="rayFolder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, -9 )
enabled = true
cast_to = Vector3( -5, 0, 20 )

[node name="floorChecker" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( 0, -20, 0 )

[node name="Particles" type="Particles" parent="."]
emitting = false
amount = 128
one_shot = true
speed_scale = 2.0
explosiveness = 0.53
randomness = 1.0
local_coords = false
process_material = SubResource( 6 )
draw_pass_1 = SubResource( 8 )

[node name="animPlayer" type="AnimationPlayer" parent="."]
anims/hurt = SubResource( 9 )

[node name="boxyColider" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="boxyColider"]
shape = SubResource( 10 )

[connection signal="area_entered" from="." to="." method="_on_baseEnemy_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_baseEnemy_body_entered"]
[connection signal="timeout" from="shootTimer" to="." method="_on_shootTimer_timeout"]
[connection signal="timeout" from="moveTimer" to="." method="_on_moveTimer_timeout"]
[connection signal="timeout" from="deathTimer" to="." method="_on_deathTimer_timeout"]
[connection signal="animation_finished" from="animPlayer" to="." method="_on_animPlayer_animation_finished"]
[connection signal="body_entered" from="boxyColider" to="." method="_on_boxyColider_body_entered"]
